# cfms_client_next

./: .gitignore  IMPLEMENTATION_COMPLETE.md  MULTILINGUAL_SUPPORT.md  README.md  pyproject.toml
.github/workflows/: desktop-and-mobile-builds.yml
src/: main.py
src/include/: constants.py
src/include/classes/: changelog.py  client.py  config.py
src/include/classes/exceptions/: request.py  transmission.py
src/include/controllers/: connect.py  explorer.py  login.py
src/include/controllers/dialogs/: directory.py  management.py  passwd.py  rightmenu.py  rulemanager.py
src/include/test/: dialog.py
src/include/ui/: constants.py
src/include/ui/controls/: connect.py  filemanager.py  home.py  homepage.py  login.py  more.py  rightmenu.py  rulemanager.py  upgrade.py
src/include/ui/controls/buttons/: upgrade.py
src/include/ui/controls/dialogs/: base.py  dev.py  explorer.py  filemanager.py  upgrade.py  whatsnew.py
src/include/ui/controls/dialogs/manage/: accounts.py  groups.py
src/include/ui/controls/dialogs/rightmenu/: explorer.py
src/include/ui/controls/rightmenu/: base.py  explorer.py
src/include/ui/controls/rightmenu/manage/: account.py  group.py
src/include/ui/controls/views/: connect.py  explorer.py  filemanager.py  login.py  more.py
src/include/ui/controls/views/manage/: account.py  audit.py  group.py  manage.py
src/include/ui/locale/: messages.pot
src/include/ui/locale/zh_CN/LC_MESSAGES/: client.po
src/include/ui/models/: about.py  connect.py  home.py  login.py  manage.py  settings.py
src/include/ui/models/settings/: connection.py  language.py  overview.py  safety.py
src/include/ui/util/: file_controls.py  group_controls.py  notifications.py  path.py  quotes.py  route.py  user_controls.py
src/include/util/: communication.py  connect.py  create.py  locale.py  path.py  requests.py  transfer.py
src/include/util/upgrade/: updater.py
src/ui/locale/: README.md
src/ui/locale/en/LC_MESSAGES/: client.po
src/ui/locale/zh_CN/LC_MESSAGES/: client.po
