[project]
name = "cfms-client-next"
version = "0.2.2"
description = "The next generation of CFMS client based on Flet framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Creeper19472", email = "creeper19472@crpteam.club" }
]
dependencies = [
  "flet==0.70.0.dev6214",
  "flet_permission_handler==0.2.0.dev505",
  "flet-open-file @ git+https://github.com/creeper19472/flet-open-file",
  "flet_model @ git+https://github.com/creeper19472/Flet-Model",
  "flet-datatable2==0.2.0.dev505",
  "websockets",
  "pycryptodome",
  "cffi",
  "requests",
  "aiofiles",
]

[tool.flet]
# Docs: https://flet.dev/docs/publish
org = "org.crpteam"
product = "cfms-client-next"
company = "Creeper Team"
copyright = "Copyright (C) 2025 by Creeper Team"

[tool.flet.app]
path = "src"

[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "4.10.1"

[tool.flet.android]
min_sdk_version = 24

[tool.uv]
dev-dependencies = [
    "flet[all]==0.70.0.dev6214",
]
prerelease = "allow"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.70.0.dev6214"}

[tool.flet.android.permission] # --android-permissions
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.MANAGE_EXTERNAL_STORAGE" = true
"android.permission.MANAGE_MEDIA" = true
"android.permission.REQUEST_INSTALL_PACKAGES" = true